# tailor-resume

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  UBIQUITOUS_LANGUAGE.md  fly.toml  pyproject.toml  reference.txt  requirements-optional.txt  requirements.txt  server.py
.claude/: .mcp.json
.github/workflows/: ci.yml  deploy-mcp.yml  deploy-web.yml  publish-pypi.yml
.streamlit/: config.toml
fixtures/: sample_blob.txt  sample_jd.txt  sample_profile.json
migrations/: 001_user_profiles.sql  002_usage_and_billing.sql
posts/: linkedin.md  reddit.md  substack.md
scripts/: install_mcp_global.py  seed_supabase.py  sync_global.py
specs/: README.md  prd_issue_body.md
streamlit_app/: app.py
streamlit_app/tabs/: download_tab.py  profile_tab.py  tailor_tab.py
tailor_resume/: __init__.py  cli.py
tailor_resume/_scripts/: latex_renderer.py  mcp_server.py  pdf_export.md  profile_extractor.py  rag_store.py  resume_types.py
tailor_resume/_templates/: resume_template.tex
tests/: conftest.py  test_api_server.py  test_ats_scorer.py  test_billing.py  test_cli.py  test_cover_letter_renderer.py  test_github_ingester.py  test_jd_gap_analyzer.py  test_latex_renderer.py  test_mcp_server.py  test_pipeline.py  test_profile_extractor.py  test_profile_extractor_regression.py  test_rag_store.py  test_rag_store_regression.py  test_star_validator.py  test_tracer_e2e.py  test_vault_client.py  test_web_api.py
web_app/: fly.toml
web_app/backend/: Dockerfile  requirements.txt
web_app/frontend/: .env.example  index.html  package.json  (+1 more)
(+50 files in other folders)
